--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -1,4 +1,3 @@
-
 #masthead {
     position: sticky;
     top: var(--admin-bar-height);
@@ -29,5 +28,20 @@
     @include responsive(xs-sm) {
         width: 25px;
         height: 20px;
+    }
+}
+
+#offCanvasMenu {
+    .listings--inner {
+        padding: 0 !important;
+        .model-num {
+            display: inline-block !important;
+            background-color: var(--bs-white);
+            padding: 5px;
+            font-size: 13px;
+            svg {
+                display: none;
+            }
+        }
     }
 }
