--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -222,6 +222,11 @@ img {
         background-size: 25px;
         background-image: none;
         color: var(--bs-white);
+        top: 40px;
+        svg {
+            width: 40px;
+            height: 40px;
+        };
         @include responsive(xs-sm) {
             width: 30px;
             height: 30px;
