--- a/style.css
+++ b/style.css
@@ -11882,6 +11882,9 @@ h5, .h5 {
 
 .listings-style-1 .swiper-listings-taxonomy .swiper-slide {
   width: 280px; }
+  .listings-style-1 .swiper-listings-taxonomy .swiper-slide .logo-box img {
+    height: 18px;
+    object-fit: contain; }
   .listings-style-1 .swiper-listings-taxonomy .swiper-slide .listings--inner {
     cursor: pointer; }
     .listings-style-1 .swiper-listings-taxonomy .swiper-slide .listings--inner.active {
