--- a/style.css
+++ b/style.css
@@ -11329,6 +11329,9 @@ img {
 .h-100 .wp-block-embed__wrapper {
   height: 100%; }
 
+.title-box img {
+  height: 18px; }
+
 @media (min-width: 1500px) {
   .container {
     max-width: 1420px; } }
