--- a/assets/stylesheets/sections/_blocks.scss
+++ b/assets/stylesheets/sections/_blocks.scss
@@ -45,10 +45,21 @@
 
 .listings--posts {
     display: none;
-  //  height: 0;
+    //  height: 0;
     overflow: hidden;
     &.active {
         //height: var(--height);
         display: block;
+    }
+}
+
+.cover-style-1 {
+    .wp-block-cover__inner-container {
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding-top: var(--md-spacing);
+        padding-bottom: var(--md-spacing);
     }
 }
