--- a/style.css
+++ b/style.css
@@ -11804,9 +11804,10 @@ h5, .h5 {
 /* Header & Footer
 /*-----------------------------------------------------------------------------------*/
 #masthead {
-  position: sticky;
-  top: var(--admin-bar-height);
   z-index: 9999; }
+  #masthead.header-transparent {
+    position: sticky;
+    top: var(--admin-bar-height); }
 
 .menu-burger {
   --burger-width: 40px;
