--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -4,6 +4,11 @@
         position: sticky;
         top: var(--admin-bar-height);
     }
+    &.header-default {
+        .menu-burger .bar {
+            background-color: var(--bs-black);
+        }
+    }
 }
 .menu-burger {
     --burger-width: 40px;
