--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -1,7 +1,9 @@
 #masthead {
     z-index: 9999;
     &.header-transparent {
-        position: sticky;
+        position: absolute;
+        left: 0;
+        right: 0;
         top: var(--admin-bar-height);
     }
     &.header-default {
