--- a/style.css
+++ b/style.css
@@ -11925,6 +11925,9 @@ h5, .h5 {
   padding-top: var(--md-spacing);
   padding-bottom: var(--md-spacing); }
 
+.listing--features {
+  border-top: 1px solid va(--dark); }
+
 /*-----------------------------------------------------------------------------------*/
 /* Plugins
 /*-----------------------------------------------------------------------------------*/
