--- a/assets/stylesheets/sections/_blocks.scss
+++ b/assets/stylesheets/sections/_blocks.scss
@@ -63,3 +63,10 @@
         padding-bottom: var(--md-spacing);
     }
 }
+
+.listing--features {
+    border-top: 1px solid va(--dark);
+    li {
+        border-bottom: 1px solid var(--dark);
+    }
+}
