--- a/assets/stylesheets/sections/_blocks.scss
+++ b/assets/stylesheets/sections/_blocks.scss
@@ -65,7 +65,7 @@
 }
 
 .listing--features {
-    border-top: 1px solid va(--dark);
+    border-top: 1px solid var(--dark);
     li {
         border-bottom: 1px solid var(--dark);
     }
