--- a/style.css
+++ b/style.css
@@ -11926,7 +11926,7 @@ h5, .h5 {
   padding-bottom: var(--md-spacing); }
 
 .listing--features {
-  border-top: 1px solid va(--dark); }
+  border-top: 1px solid var(--dark); }
   .listing--features li {
     border-bottom: 1px solid var(--dark); }
 
