--- a/assets/stylesheets/base/_typography.scss
+++ b/assets/stylesheets/base/_typography.scss
@@ -1,5 +1,5 @@
 body {
-    font-family: "Pennypacker", sans-serif;
+    font-family: "pennypacker-semiwide", sans-serif;
     color: var(--text-color);
     font-size: 16px;
     line-height: 1.2;
