--- a/assets/stylesheets/base/_typography.scss
+++ b/assets/stylesheets/base/_typography.scss
@@ -12,7 +12,7 @@ body {
 }
 
 @include headings {
-    font-weight: bold;
+    font-weight: 400;
     line-height: 1.2;
     color: var(--black-color);
 }
